Handle tag pages

--- a/ui/entry.html
+++ b/ui/entry.html
@@ -5,6 +5,7 @@
   {{- entry.title -}}
   {{- entry.title ? ' / ' -}}
   {{- entry.created_at | date('F j, Y g:ia') -}}
+  @ trainedmonkey
 {% endblock %}
 
 {% block content %}
