Get rid of extra_sidebar, use parent()

--- a/ui/archive.html
+++ b/ui/archive.html
@@ -27,7 +27,8 @@
   tags @ trainedmonkey
 {% endblock %}
 
-{% block extra_sidebar %}
+{% block sidebar %}
+  {{ parent() }}
   <ul>
     <li>
       {% for year in years %}
