Add search using Sphinx

--- a/ui/layout.html
+++ b/ui/layout.html
@@ -41,11 +41,11 @@
       <li><a href="http://rawmaterialsLA.com/">raw materials</a></li>
     </ul>
 
-    <form id="search" method="get" action="/">
+    <form id="search" method="get" action="/search">
       <fieldset>
         <legend>search</legend>
         <input type="search" accesskey="4" id="livesearch" name="q"
-               value="" size="10"
+               value="{{ q }}" size="10"
                style="width:100%"
                placeholder="search"
                autosave="tm_search"
