Get rid of http: on some links

--- a/ui/layout.html
+++ b/ui/layout.html
@@ -35,10 +35,10 @@
       <li><a rel="about" href="/about/">about</a></li>
       <li><a rel="toc" href="/archive/">archive</a></li>
       <li><a href="/projects/">projects</a></li>
-      <li><a href="http://www.flickr.com/photos/jimwinstead/">photos</a></li>
+      <li><a href=//www.flickr.com/photos/jimwinstead/">photos</a></li>
       <li><a href="http://www.5thandspring.com/">celia</a></li>
       <li><a href="http://213dog.blogspot.com/">wonton</a></li>
-      <li><a href="http://rawmaterialsLA.com/">raw materials</a></li>
+      <li><a href="//rawmaterialsla.com/">raw materials</a></li>
     </ul>
 
     <form id="search" method="get" action="/search">
