--- a/ui/layout.html
+++ b/ui/layout.html
@@ -39,6 +39,7 @@
       <li><a href="http://www.5thandspring.com/">celia</a></li>
       <li><a href="http://213dog.blogspot.com/">wonton</a></li>
       <li><a href="//rawmaterialsla.com/">raw materials</a></li>
+      <li><a rel="me" href="https://mefi.social/@jimw">toots</a></li>
     </ul>
 
     <form id="search" method="get" action="/search">
