--- a/ui/layout.html
+++ b/ui/layout.html
@@ -56,11 +56,13 @@
       </form>
     {% endblock %}
   </div>
+
+  <ul id="links" class="footer">
+    <li><a rel="copyright" href="//creativecommons.org/licenses/publicdomain"><img src="/common/norights.png" width="88" height="31" alt="dedicated to the public domain" /></a></li>
+  </ul>
+
 </div>
 
-<ul id="links">
-  <li><a rel="copyright" href="//creativecommons.org/licenses/publicdomain"><img src="/common/norights.png" width="88" height="31" alt="dedicated to the public domain" /></a></li>
-</ul>
 </body>
 </html>
 <!--
