--- a/ui/month.html
+++ b/ui/month.html
@@ -83,16 +83,16 @@ table.calendar a:hover {
   {# previous and last month links #}
   <div style="text-align: center">
     {% if prev %}
-      <a href="{{ prev.created_at | date('/Y/n') }}">
-        &laquo; {{ prev.created_at | date('F Y') | lower }}
+      <a href="{{ prev | date('/Y/n') }}">
+        &laquo; {{ prev | date('F Y') | lower }}
       </a>
     {% endif %}
     {% if next and prev %}
       &bull;
     {% endif %}
     {% if next %}
-      <a href="{{ next.created_at | date('/Y/n') }}">
-        {{ next.created_at | date('F Y') | lower }} &raquo;
+      <a href="{{ next | date('/Y/n') }}">
+        {{ next | date('F Y') | lower }} &raquo;
       </a>
     {% endif %}
   </div>
