Make it possible to specify text for toot

--- a/ui/admin/edit-entry.html
+++ b/ui/admin/edit-entry.html
@@ -35,6 +35,11 @@
   </label>
 
   <label>
+    Toot
+    <textarea name="toot" rows="3">{{ entry.toot }}</textarea>
+  </label>
+
+  <label>
     Tags
     <input type="text" name="tags" value="{{ entry.tags | join(', ') | e('html_attr') }}">
   </label>
