Get rid of image for PD dedication, add h-card

--- a/ui/layout.html
+++ b/ui/layout.html
@@ -59,7 +59,7 @@
   </div>
 
   <ul id="links" class="footer">
-    <li><a rel="copyright" href="//creativecommons.org/licenses/publicdomain"><img src="/common/norights.png" width="88" height="31" alt="dedicated to the public domain" /></a></li>
+    <li><a rel="copyright" href="//creativecommons.org/licenses/publicdomain">Dedicated to the public domain</a> by <a class="h-card" href="https://trainedmonkey.com/">Jim Winstead Jr.</a></li>
   </ul>
 
 </div>
