Add markup for h-entry

--- a/ui/layout.html
+++ b/ui/layout.html
@@ -9,6 +9,7 @@
       @ trainedmonkey
     {% endif %}
   </title>
+  <link rel="author" href="https://trainedmonkey.com/" />
   <link rel="shortcut icon" href="/common/fav.ico" />
   <link rel="stylesheet" type="text/css" media="screen"
         href="/common/screen.css?{{ current_release() }}" />
