Handle tags and albums in photo library

--- a/ui/layout.html
+++ b/ui/layout.html
@@ -39,7 +39,7 @@
         <li><a rel="about" href="/about/">about</a></li>
         <li><a rel="toc" href="/archive/">archive</a></li>
         <li><a href="/projects/">projects</a></li>
-        <li><a href=//www.flickr.com/photos/jimwinstead/">photos</a></li>
+        <li><a href="{{ url_for('photos') }}">photos</a></li>
         <li><a href="http://www.5thandspring.com/">celia</a></li>
         <li><a href="http://213dog.blogspot.com/">wonton</a></li>
         <li><a rel="me" href="https://mefi.social/@jimw">@jimw@mefi.social</a></li>
