--- a/ui/photo/albums.html
+++ b/ui/photo/albums.html
@@ -1,18 +1,10 @@
 {% extends 'layout.html' %}
 
-{% if tag %}
-  {% set title = "with '" ~ tag ~ "' tag " %}
-{% endif %}
-
-{% if album %}
-  {% set title = album.title %}
-{% endif %}
-
 {% block title %}
   {% if title %}
     {{ title }} @ trainedmonkey
   {% else %}
-    trainedmonkey: photos from jim winstead jr.
+    trainedmonkey: photo albums from jim winstead jr.
   {% endif %}
 {% endblock %}
 
@@ -72,7 +64,7 @@
 {% endblock %}
 
 {% block prevnext %}
-  {% set total = photos[0].records %}
+  {% set total = albums[0].records %}
   <div class="pager">
     <div class="previous">
       {% if page > 0 %}
@@ -82,7 +74,7 @@
       {% endif %}
     </div>
     <div class="current">
-      showing {{ (page * page_size) + 1 }} to {{ (page * page_size) + (photos|length) }}
+      showing {{ (page * page_size) + 1 }} to {{ (page * page_size) + (albums|length) }}
       of {{ total }}
     </div>
     <div class="next">
@@ -109,23 +101,18 @@
 
 {% block content %}
   <h1>
-    {% if tag %}
-      photos with '{{ tag }}' tag
-    {% elseif album %}
-      {{ album.title }}
-    {% else %}
-      trained<b>monkey</b> photos
-    {% endif %}
+    {{ album.title }}
   </h1>
 
   <div class="">
     {{ block('prevnext') }}
 
     <ul class="image-gallery">
-      {% for photo in photos %}
+      {% for album in albums %}
+        {% set photo = album.cover_photo() %}
         <li>
           <figure>
-            <a href="{{ url_for('photo', { ulid: photo.ulid }) }}">
+            <a href="{{ url_for('photo-album', { album_name: album.name }) }}">
               <img lazy
                 style="aspect-ratio: {{ photo.width }} / {{ photo.height }}"
                 {# x-dims="{{ photo.thumbHashDimensions() | json_encode }}" #}
@@ -133,7 +120,7 @@
                 src="{{ photo.imgUrl({ 'width': 240, 'height': 240, 'mode': 'fit' }) }}"
                 alt="{{ photo.alt_text ?? photo.name }}">
             </a>
-            <figcaption>{{ photo.name }}</figcaption>
+            <figcaption>{{ album.title }}</figcaption>
           </figure>
         </li>
       {% endfor %}
@@ -143,3 +130,4 @@
   </div>
 
 {% endblock %}
+
