Cleanup of titles and sidebar. Embracing capital letter aesthetic.

--- a/ui/entry.html
+++ b/ui/entry.html
@@ -45,6 +45,8 @@
 {% endblock %}
 
 {% block content %}
+  <h1>from the Archive</h1>
+
   {% include 'entry.twig' %}
 
   {% if previous.id or next.id %}
