--- a/ui/index.html
+++ b/ui/index.html
@@ -22,9 +22,9 @@
 {% block content %}
   <h1>
     {% if tag %}
-      with '{{ tag }}' tag
+      Entries tagged '{{ tag }}'
     {% else %}
-      trained<b>monkey</b>
+      aka Jim Winstead Jr.
     {% endif %}
   </h1>
 
