--- a/ui/layout.html
+++ b/ui/layout.html
@@ -62,7 +62,7 @@
   </div>
 
   <ul id="links" class="footer">
-    <li><a rel="copyright" href="//creativecommons.org/licenses/publicdomain">Dedicated to the public domain</a> by <a class="h-card" href="https://trainedmonkey.com/">Jim Winstead Jr.</a></li>
+    <li><a rel="copyright" href="https://creativecommons.org/publicdomain/zero/1.0/">Dedicated to the public domain</a> by <a class="h-card" href="https://trainedmonkey.com/">Jim Winstead Jr.</a></li>
   </ul>
 
 </div>
