--- a/ui/year.html
+++ b/ui/year.html
@@ -60,7 +60,7 @@ table.calendar a:hover {
       <table class="calendar"
              summary="links to days with posts from {{ first|date('F') }}">
         <caption>
-          <a href="/{{ year }}/{{ month }}">{{ first|date("F")|lower }}</a>
+          <a href="/{{ year }}/{{ month }}">{{ first|date("F") }}</a>
         </caption>
         <tr>
           <th>sun</th><th>mon</th><th>tue</th><th>wed</th><th>thu</th><th>fri</th><th>sat</th>
