Use IndieAuth for authentication via GitHub

--- a/ui/layout.html
+++ b/ui/layout.html
@@ -10,6 +10,7 @@
     {% endif %}
   </title>
   <link rel="author" href="https://trainedmonkey.com/" />
+  <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="shortcut icon" href="/common/fav.ico" />
   <link rel="stylesheet" type="text/css" media="screen"
         href="/common/screen.css?{{ current_release() }}" />
@@ -43,6 +44,7 @@
         <li><a rel="about" href="/about">About</a></li>
         <li><a rel="toc" href="/archive">Archive</a></li>
         <li><a href="/projects">Projects</a></li>
+        <li><a href="https://github.com/jimwins" rel="me">GitHub</a></li>
         <li><a href="{{ url_for('photos') }}">Photos</a></li>
         <li><a rel="me" href="https://mefi.social/@jimw">@jimw@mefi.social</a></li>
       </ul>
