Link to tag-specific feeds on tag pages, use helpers to get URL

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,10 +13,14 @@
 {% endblock %}
 
 {% block extra_head %}
-<link rel="alternate" type="application/atom+xml" title="atom feed" href="http://trainedmonkey.com/index.atom" />
-<link rel="shortcut icon" href="/common/fav.ico" />
-<meta name="ICBM" content="34.0480,-118.2473" />
-<meta name="geo.position" content="34.0480;-118.2473" />
+  {% if tag %}
+    <link rel="alternate" type="application/atom+xml" title="atom feed for {{ tag | e('html_attr') }}" href="{{ full_url_for('tag_atom', { tag: tag }) }}" />
+  {% else %}
+    <link rel="alternate" type="application/atom+xml" title="atom feed" href="{{ full_url_for('atom') }}" />
+  {% endif %}
+  <link rel="shortcut icon" href="/common/fav.ico" />
+  <meta name="ICBM" content="34.0480,-118.2473" />
+  <meta name="geo.position" content="34.0480;-118.2473" />
 {% endblock %}
 
 {% block content %}
