--- a/ui/admin/edit-entry.html
+++ b/ui/admin/edit-entry.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-  edit entry @ trainedmonkey.com
+  edit entry
 {% endblock %}
 
 {% block content %}
