--- a/ui/admin/edit-page.html
+++ b/ui/admin/edit-page.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-  edit page @ trainedmonkey.com
+  edit page
 {% endblock %}
 
 {% block content %}
