Create a service for pages, add special handling for @slugs
Still rough around the edges, but this is a path towards storing and using
fragments of content, working towards removing personal details from the code

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,7 +33,7 @@
   </h1>
 
   {% if not tag %}
-    {% include 'bio.twig' %}
+    {{ includeFragment('@hireMe').content | raw }}
   {% endif %}
 
   {% include 'entries.twig' %}
