--- a/ui/entry.html
+++ b/ui/entry.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block extra_head %}
+  <link rel="webmention" href="/~webmention">
   <script>
     function getCookie(name) {
       var match= document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
