--- a/ui/404.html
+++ b/ui/404.html
@@ -6,7 +6,9 @@
 
 {% block content %}
 
-  <p class="error">an error occured. some of the monkeys haven't been trained very well, and sometimes they forget to put things where they're supposed to go. please forgive them.</p>
+  <h1>Not found</h1>
 
-  <p align="center"><b><a href="/">try it again from the top.</a></b></p>
+  <p class="error">Whatever you were looking for was not found here. Some of the monkeys haven't been trained very well, and sometimes they forget to put things where they're supposed to go. Please forgive them.</p>
+
+  <p><b><a href="/">Try it again from the top.</a></b></p>
 {% endblock %}
